# forex

./: .replit  API_INTEGRATION_GUIDE.md  COMPLETE_CODEBASE_ANALYSIS.txt  DEVELOPER_GUIDE.md  DOCUMENTATION_INDEX.md  PATTERN_DETECTION_INTERNALS.md  QUICK_START_GUIDE.md  README.md  THREADING_ARCHITECTURE_GUIDE.md  THREADING_REFACTOR_SUMMARY.md  USER_GUIDE.md  config.ini  desktop_app.py  main.py  pyproject.toml  replit.md  requirements_async.txt  run_desktop.py  simple_web_app.py  test_api.py  test_async_monitoring.py  test_core.py  web_app.py
attached_assets/: InverseHeadAndShoulders_1751450538380.py  Pasted--10-34-14-INFO-Chart-updated-successfully-with-1008-data-points-10-34-15-INFO-Status-Data-1750584909488_1750584909490.txt  Pasted--12-28-46-INFO-Starting-advanced-real-time-monitoring-system-12-28-46-INFO-Fetching-AAPL-d-1750764595843_1750764595844.txt  Pasted--12-33-13-INFO-12-33-13-INFO-Starting-F-1750764900040_1750764900041.txt  Pasted--12-38-12-INFO-12-38-12-INFO-Starting-F-1750765136335_1750765136338.txt  Pasted--2025-06-24-12-46-08-631176-I-tensorflow-core-util-port-cc-153-oneDNN-custom-operations-are-on-Y-1750765730984_1750765730985.txt  Pasted--21-58-07-ERROR-Error-creating-candlestick-chart-zero-size-array-to-reduction-operation-maximu-1750885190319_1750885190320.txt  Pasted--Traceback-most-recent-call-last-File-C-Users-Dell-OneDrive-Desktop-PROJECTS-COSTUMERS-TRAD-1750587919424_1750587919425.txt  Pasted--User-Experience-Flow-From-Launch-to-Trading-1-Easy-Onboarding-First-time-users-are-guided-wi-1750587188933_1750587188934.txt  doublebottom_1751450538379.py  (+9 more)
(+25 files in other folders)
